script for setup steps, todo is to add curl for fetching the zig-xtensa compiler

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,10 @@ zig-out/
 /build 
 /sdkconfig
 /managed_components
-
+cmake-build-*/
+.cache/
+*zig-*/
+/CMakeFiles
+CMakeCache.txt
+cmake_install*
+Makefile
